refactor: use schema objects in my_review views, simplify update responses
